data ingestion notebook added

--- a/reseach/trail.ipynb
+++ b/reseach/trail.ipynb
@@ -412,6 +412,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download data from gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https:',\n",
+       " '',\n",
+       " 'drive.google.com',\n",
+       " 'file',\n",
+       " 'd',\n",
+       " '1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY',\n",
+       " 'view?usp=sharing']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id =url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY&confirm=t&uuid=674214c3-1192-4b7c-a8f8-b777b5175e34\n",
+      "To: d:\\Chest-Disease-Classification\\chest-cancer-classification\\reseach\\zip chest ct scan data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:50<00:00, 961kB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'zip chest ct scan data.zip'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix= 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix + file_id, \"zip chest ct scan data.zip\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
