data ingestion updated

--- a/reseach/trail.ipynb
+++ b/reseach/trail.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,16 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://drive.google.com/file/d/1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY/view?usp=sharing\""
+    "url = \"https://drive.google.com/file/d/1DgoTojJhjUx0303edua4jOpDMVb8ofZZ/view?usp=sharing\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "str"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -469,11 +469,11 @@
        " 'drive.google.com',\n",
        " 'file',\n",
        " 'd',\n",
-       " '1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY',\n",
+       " '1DgoTojJhjUx0303edua4jOpDMVb8ofZZ',\n",
        " 'view?usp=sharing']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,16 +485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY'"
+       "'1DgoTojJhjUx0303edua4jOpDMVb8ofZZ'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -514,26 +514,26 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "From (original): https://drive.google.com/uc?/export=download&id=1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY\n",
-      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1FZVHfJqLyajMzv3zEMCkQeC7ho6F5TIY&confirm=t&uuid=674214c3-1192-4b7c-a8f8-b777b5175e34\n",
-      "To: d:\\Chest-Disease-Classification\\chest-cancer-classification\\reseach\\zip chest ct scan data.zip\n",
-      "100%|██████████| 49.0M/49.0M [00:50<00:00, 961kB/s] \n"
+      "From (original): https://drive.google.com/uc?/export=download&id=1DgoTojJhjUx0303edua4jOpDMVb8ofZZ\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1DgoTojJhjUx0303edua4jOpDMVb8ofZZ&confirm=t&uuid=cbece8f1-f19d-4060-baf6-d1c722706a8d\n",
+      "To: d:\\Chest-Disease-Classification\\chest-cancer-classification\\reseach\\Chest-CT-Scan-data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:02<00:00, 20.1MB/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'zip chest ct scan data.zip'"
+       "'Chest-CT-Scan-data.zip'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prefix= 'https://drive.google.com/uc?/export=download&id='\n",
-    "gdown.download(prefix + file_id, \"zip chest ct scan data.zip\")"
+    "gdown.download(prefix + file_id, \"Chest-CT-Scan-data.zip\")"
    ]
   },
   {
